--- a/Wijesiri.Motors.WebApp/src/assets/i18n/sn.json
+++ b/Wijesiri.Motors.WebApp/src/assets/i18n/sn.json
@@ -1,161 +1,39 @@
 {
-    "LOGIN": {
-        "TITLE": "登录到 clovatel",
-        "USERNAME": "පස්ස්වාර්ඩ්",
-        "PASSWORD": "密码",
-        "BTN_TEXT": "登录",
-        "FORGOT_PASSWORD": "忘记密码",
-        "VALIDATION_MSG": "密码或用户名不正确"
-    },
-    "BRANCH_SELECTION": {
-        "TITLE": "选择你的分支",
-        "SELECT_BRANCH": "选择分支",
-        "BTN_TEXT": "好"
-    },
-    "USER_PROFILE_MODEL": {
-        "TITLE": "用户配置文件设置",
-        "USER_NAME": "用户名",
-        "RESET_PASSWORD": "重设密码",
-        "DISPLAY_NAME": "显示名称",
-        "PASSWORD": "密码",
-        "EMAIL": "电子邮件",
-        "NEW_PASSWORD": "新密码",
-        "RE_TYPE_PASSWORD": "重新输入密码",
-        "SAVE": "保存",
-        "CANCEL": "取消"
-    },
-    "RESERVATION": {
-        "RESERVATION_TRACE": {
-            "TRACE_SEARCH": {
-                "TITLE": "预留跟踪搜索",
-                "BTN_ADD_NEW": "添新",
-                "BTN_SEARCH": "搜索",
-                "BTN_CANCEL": "取消",
-                "FILTER_OPT": {
-                    "ALL": "所有",
-                    "RESOLVED": "解决",
-                    "UNRESOLVED": "未解决"
-                },
-                "TABLE_COL": {
-                    "DESCRIPTION": "名称",
-                    "TRACE_DATE": "跟踪日期",
-                    "ENTERED_BY": "进入",
-                    "RESOLVED_DATE": "解决",
-                    "RESOLVED_BY": "通过解决",
-                    "EDIT": "编辑",
-                    "DELETE": "删除"
-                },
-                "TRACE_DELETE": {
-                    "CFM_POPUP_TITLE": "删除确认",
-                    "CFM_POPUP_MSG": "你真的想删除吗?",
-                    "DELETE_SUCCESS_TITLE": "删除",
-                    "DELETE_SUCCESS_MSG": "成功删除."
-                },
-                "UPDATE_SUCCESS": {
-                    "TITLE": "更新",
-                    "MSG": "成功更新."
-                }
-            },
-            "CREATE_TRACE": {
-                "TITLE": "创建预留跟踪",
-                "PROPERTIES": {
-                    "FROM_DATE": "从日期 *",
-                    "TO_DATE": "至今 *",
-                    "DESCRIPTION": "描述 *",
-                    "TRACE_TIME": "跟踪时间 *"
-                },
-                "VALIDATIONS": {
-                    "description": {
-                        "required": "说明是必需的."
-                    },
-                    "fromDate": {
-                        "required": "从日期是必需的."
-                    },
-                    "toDate": {
-                        "required": "至今是必需的."
-                    },
-                    "traceTime": {
-                        "required": "跟踪时间是必需的."
-                    }
-                },
-                "BTN_SAVE": "保存",
-                "BTN_CANCEL": "取消",
-                "CREATE_SUCCESS": {
-                    "TITLE": "加",
-                    "MSG": "成功添加."
-                },
-                "RESERVATION_DETL": {
-                    "NAME": "名称",
-                    "ROOM_NO": "房间号.",
-                    "ARRIVAL": "到达",
-                    "DEPARTURE": "离开",
-                    "STATUS": "状态"
-                }
-            },
-            "UPDATE_TRACE": {
-                "TITLE": "更新预订跟踪",
-                "UPDATE_SUCCESS": {
-                    "TITLE": "更新",
-                    "MSG": "成功更新."
-                }
-            }
-        }
-    },
-    "FRONTDESK": {
-        "COMMON": {
-            "NO_RECORDS_FOUND": "没有找到记录.",
-            "SAVE_BTN": "保存",
-            "CLEAR_BTN": "取消",
-            "BTN_SEARCH": "搜索",
-            "BTN_CLEAR": "明确",
-             "BTN_EDIT": "编辑",
-              "BTN_DELETE": "删除",
-              "BTN_CANCEL":"取消",
-              "BTN_SAVE":"保存"
+  "LOGIN": {
+    "TITLE": "Login to clovatel",
+    "USERNAME": "Email or username",
+    "PASSWORD": "Password",
+    "BTN_TEXT": "Login",
+    "FORGOT_PASSWORD": " Forgot Password",
+    "VALIDATION_MSG": "Password or Username not correct"
+  },
+  "CUSTOMER": {
+    "ADD_NEW": {
+      "TITLE": "නව පාරිභෝගිකයා",
+      "LBL_FIRST_NAME": "මුල් නම",
+      "LBL_LAST_NAME": "අග නම",
+      "LBL_TYPE": "වර්ගය",
+      "LBL_ADDRESS": "ලිපිනය",
+      "LBL_TP": "දු.ක",
+      "BTN_SAVE": "ඇතුලත් කරන්න ",
+      "BTN_CANCEL": "ආපසු",
+      "VALIDATIONS": {
+        "firstName": {
+          "required": "මුල් නම අවශ්‍යයි."
         },
-        "TRACE_SEARCH": {
-            "PAGE_TITLE": "痕迹",
-            "SEARCH_OPT": {
-                "NAME": "名称",
-                "ENTERED_BY": "进入",
-                "CFM_NO": "确认号码.",
-                "ARRIVAL_DATE": "到达日期",
-                "TRACE_DATE": "跟踪日期",
-                "ALL": "所有",
-                "RESOLVED": "解决",
-                "UNRESOLVED": "未解决"
-            },
-            "TRACE_RESOLVE": {
-                "VALIDATIONS": {
-                    "description": {
-                        "required": "说明是必需的."
-                    }
-                },
-                "DESCRIPTION": "描述",
-                "CB_SET_UNRESOLVE":"设置为未解决",
-                "UPDATE_SUCCESS":
-                {
-                    "TITLE":"更新",
-                    "MSG":"成功更新."
-                }
-            },
-            "TABLE_COL": {
-                "NAME": "名称",
-                "CFM_NO": "确认号码.",
-                "ARRIVAL_DATE": "到达日期",
-                "TRACE_DATE": "跟踪日期",
-                "ENTERED_BY": "进入",
-                "RESOLVED_AT": "解决在",
-                "RESOLVED_BY": "通过解决",
-                "DESCRIPTION": "描述"
-            },
-            "TRACE_DELETE":
-            {
-                "CFM_POPUP_TITLE":"删除确认",
-                "CFM_POPUP_MSG":"你真的想删除吗?",
-                "DELETE_SUCCESS_TITLE":"删除",
-                "DELETE_SUCCESS_MSG":"已成功删除."
-            }
+        "lastName": {
+          "required": "අග නම අවශ්‍යයි."
+        },
+        "type": {
+          "required": "වර්ගය අවශ්‍යයි"
+        },
+        "address": {
+          "required": "ලිපිනය අවශ්‍යයි"
+        },
+        "tp": {
+          "required": "දු.ක අවශ්‍යයි"
         }
+      }
     }
+  }
 }
