--- a/Wijesiri.Motors.WebApp/src/assets/i18n/sn.json
+++ b/Wijesiri.Motors.WebApp/src/assets/i18n/sn.json
@@ -35,5 +35,34 @@
         }
       }
     }
+  },
+  "VEHICLE": {
+    "ADD_NEW": {
+      "TITLE": "නව මෝටර් රථය",
+      "LBL_MAKE": "නිෂ්පාදනය",
+      "LBL_MODEL": "මාදිලිය",
+      "LBL_YEAR": "නිෂ්පාදිත වර්ෂය",
+      "LBL_REGNO": "ලියාපදිංචි අංකය",
+      "LBL_TYPE": "වර්ගය",
+      "BTN_SAVE": "ඇතුලත් කරන්න",
+      "BTN_CANCEL": "ආපසු",
+      "VALIDATIONS": {
+        "make": {
+          "required": "නිෂ්පාදනය අවශ්‍යයි."
+        },
+        "model": {
+          "required": "මාදිලිය අවශ්‍යයි."
+        },
+        "year": {
+          "required": "නිෂ්පාදිත වර්ෂය අවශ්‍යයි."
+        },
+        "regNo": {
+          "required": "ලියාපදිංචි අංකය අවශ්‍යයි."
+        },
+        "type": {
+          "required": "වර්ගය අවශ්‍යයි."
+        }
+      }
+    }
   }
 }
